# zotnotes

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
scripts/: build_dmg.sh  sync_icons_from_macos.sh  zotero-debug.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/source/icon.icon/: icon.json
src-tauri/icons/source/zotnote.icon/: icon.json
src-tauri/src/: lib.rs  main.rs
src/__tests__/: markdown.test.ts
src/components/: ItemPicker.tsx  PreviewPanel.tsx  SettingsDialog.tsx  Toasts.tsx
src/components/ui/: button.tsx  card.tsx  command.tsx  dialog.tsx  input.tsx  scroll-area.tsx
src/lib/: citekey.ts  colors.ts  exporter.ts  markdown.ts  tauri.ts  types.ts  utils.ts  zotero.ts
