[package]
name = "zotnotes"
version = "0.1.0"
description = "Zotero annotation export desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "zotnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
